# feed-crafter

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
src/: api.rs  common.rs  main.rs  web.rs
static/: style.css
templates/: add_item.html  edit_item.html  index.html
tests/: common.rs  test_common_create_feed.rs  test_common_create_item.rs  test_common_initialize_feed.rs  test_common_write_channel.rs
