[package]
name = "feed-crafter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
rss = "2.0.12"
askama = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }